--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Source: https://startbootstrap.com/template-overviews/3-col-portfolio/ -->
+<!-- Source: https://startbootstrap.com/template-overviews/3-col-portfolio/ -->
 
 <head>
 
@@ -36,7 +36,13 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-           -->
+            -->
+            <li class="nav-item">
+                <a class="nav-link" href="https://github.com/xadamxk/3D-Models">STL Files
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+           
         </ul>
       </div>
     </div>
@@ -51,13 +57,14 @@
       <small>Various models and colors available</small>
     </h1>
 
-    <div class="row">
-      <div class="col-lg-4 col-sm-6 portfolio-item">
+    <div class="row" id="cellContainer">
+      <!--
+      <div class="col-lg-4 col-sm-6 portfolio-item modelCell">
         <div class="card h-100">
           <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project One</a>
+              <b id="">Project Name</b>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum
               quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum
@@ -65,24 +72,23 @@
           </div>
         </div>
       </div>
-      
-    <!-- /.row -->
-
-  </div>
-  <!-- /.container -->
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; xadamxk 2018</p>
+      -->
+      <!-- /.row -->
     </div>
     <!-- /.container -->
-  </footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="vendor/javascript/index.js"></script>
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; xadamxk 2018</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/javascript/index.js"></script>
 
 </body>
 
