--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="css/3-col-portfolio.css" rel="stylesheet">
+  <!-- Index.css -->
+  <link href="css/index.css" rel="stylesheet">
 
 </head>
 
